deployments/openshift/kustomize/base/app/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: app
spec:
  strategy:
    type: Rolling
  triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
            - app
          from:
            kind: ImageStreamTag
            name: app:develop-latest
            namespace: f3c07a-tools
        type: ImageChange
  replicas: 1
  selector:
    name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: app
        image: app:latest
        ports:
        - containerPort: 5173
          protocol: TCP
        resources:
            requests:
              cpu: 200m 
              memory: 100Mi 
            limits:
              cpu: 400m 
              memory: 200Mi
