deployments/openshift/kustomize/base/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: app
        image: artifacts.developer.gov.bc.ca/af3c-gen-docker-local/app:develop-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
