deployments/openshift/kustomize/base/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    name: app
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
